Updates patterns and assets to add headers and footers

--- a/src/patterns/__environment__/50-organisms/footer.hbs
+++ b/src/patterns/__environment__/50-organisms/footer.hbs
@@ -1,6 +1,6 @@
 {{#with footer}}
 
-<footer class="footer">
+<footer class="footer{{#if ../classes}} {{../classes}}{{/if}}">
 
   {{#with navigation}}{{> molecules-branding-footer classes='footer-branding' logo=../logo}}{{/with}}
 
