--- a/src/patterns/__environment__/60-templates/cover.hbs
+++ b/src/patterns/__environment__/60-templates/cover.hbs
@@ -174,7 +174,7 @@
 
 <div class="cover-page{{#if hero}} has-hero{{/if}}">
 
-  <header class="cover-page-header"></header>
+  {{> organisms-header classes='cover-page-header'}}
 
   <div class="cover-page-main">
 
@@ -201,6 +201,6 @@
 
   </div>
 
-  <footer class="cover-page-footer"></footer>
+  {{> organisms-footer classes='cover-page-footer'}}
 
 </div>
