--- a/src/patterns/__environment__/60-templates/index.hbs
+++ b/src/patterns/__environment__/60-templates/index.hbs
@@ -65,11 +65,16 @@
 {{/if}}
 
 <div class="index-page">
+
+  {{> organisms-header classes='index-page-header'}}
+
   <header class="index-page-header"></header>
   {{#extend 'organisms-main' type='index-page' classes='index-page-main'}}
     {{#content 'section-main-body'}}
       {{> compounds-tiles columns=(objectify s=1 m=2 l=3) tile-type='utility'}}
     {{/content}}
   {{/extend}}
-  <footer class="index-page-footer"></footer>
+
+  {{> organisms-footer classes='index-page-footer'}}
+
 </div>
