--- a/src/patterns/__environment__/60-templates/landing.hbs
+++ b/src/patterns/__environment__/60-templates/landing.hbs
@@ -179,7 +179,7 @@
 
 <div class="landing-page">
 
-  <header class="landing-page-header"></header>
+  {{> organisms-header classes='landing-page-header'}}
 
   <div class="landing-page-main">
 
@@ -205,6 +205,6 @@
 
   </div>
 
-  <footer class="landing-page-footer"></footer>
+  {{> organisms-footer classes='landing-page-footer'}}
 
 </div>
