--- a/src/patterns/__environment__/50-organisms/header.hbs
+++ b/src/patterns/__environment__/50-organisms/header.hbs
@@ -1,6 +1,6 @@
 {{#with header}}
 
-<header class="header">
+<header class="header{{#if ../classes}} {{../classes}}{{/if}}">
 
   <div class="header-notifications"></div>
 
