--- a/src/patterns/__environment__/60-templates/gallery.hbs
+++ b/src/patterns/__environment__/60-templates/gallery.hbs
@@ -238,7 +238,9 @@
 {{/unless}}
 
 <div class="gallery-page">
-  <header class="gallery-page-header"></header>
+
+  {{> organisms-header classes='gallery-page-header'}}
+
   <div class="gallery-page-main">
     {{> organisms-main type='gallery-page'}}
     {{#extend 'organisms-major' theme='dark' heading='Current Exhibitions'}}
@@ -264,5 +266,7 @@
       {{/content}}
     {{/extend}}
   </div>
-  <footer class="gallery-page-footer"></footer>
+
+  {{> organisms-footer classes='gallery-page-footer'}}
+
 </div>
