--- a/src/patterns/__environment__/60-templates/research-help-directory.hbs
+++ b/src/patterns/__environment__/60-templates/research-help-directory.hbs
@@ -32,6 +32,9 @@
 
 <div class="research-help-directory-page">
   <header class="research-help-directory-page-header"></header>
+
+  {{> organisms-header classes='research-help-directory-page-header'}}
+
   {{#extend 'organisms-main' type="research-help-directory-page" classes="research-help-directory-page-main"}}
     {{#content 'section-main-body'}}
 
@@ -40,5 +43,7 @@
 
     {{/content}}
   {{/extend}}
-  <footer class="research-help-directory-page-footer"></footer>
+
+  {{> organisms-footer classes='research-help-directory-page-footer'}}
+
 </div>
