--- a/src/patterns/__environment__/60-templates/service-directory.hbs
+++ b/src/patterns/__environment__/60-templates/service-directory.hbs
@@ -112,7 +112,9 @@
 {{#if __params__}}{{assign 'query' (default __params__.q __params__.query '')}}{{/if}}
 
 <div class="service-directory-page">
-  <header class="service-directory-page-header"></header>
+
+  {{> organisms-header classes='service-directory-page-header'}}
+
   {{#extend 'organisms-main' type="service-directory-page" classes="service-directory-page-main"}}
     {{#content 'section-main-body'}}
 
@@ -142,5 +144,7 @@
 
     {{/content}}
   {{/extend}}
-  <footer class="service-directory-page-footer"></footer>
+
+  {{> organisms-footer classes='service-directory-page-footer'}}
+
 </div>
