--- a/src/patterns/__environment__/60-templates/tool.hbs
+++ b/src/patterns/__environment__/60-templates/tool.hbs
@@ -79,7 +79,9 @@
 {{/if}}
 
 <div class="tool-page">
-  <header class="tool-page-header"></header>
+
+  {{> organisms-header classes='tool-page-header'}}
+
   <div class="tool-page-main">
 
     {{#extend 'organisms-main' type='tool-page' classes='tool-page-main'}}
@@ -108,5 +110,7 @@
     {{/if}}
 
   </div>
-  <footer class="tool-page-footer"></footer>
+
+  {{> organisms-footer classes='tool-page-footer'}}
+
 </div>
