--- a/src/patterns/__environment__/20-atoms/21-subnav-button~main.hbs
+++ b/src/patterns/__environment__/20-atoms/21-subnav-button~main.hbs
@@ -1,6 +1,10 @@
+{{#if href}}
+  {{#if (and (startsWithSubstring href '/') (not (startsWithSubstring href '//')))}}
+    {{assign 'href' (combine (baseUrl) href)}}
+  {{/if}}
+{{/if}}
+
 <a href="{{href}}" class="subnav-button{{#if utility}} -utility{{/if}}{{#if viewall}} -viewall{{/if}}{{#if hover}} is-hover{{/if}}{{#if focus}} is-focus{{/if}}{{#if active}} is-active{{/if}}{{#if disabled}} is-disabled{{/if}}{{#if classes}} {{classes}}{{/if}}"{{#if disabled}} disabled{{/if}}>
   {{label}}
   {{#unless viewall}}{{#if alias}}<span class="subnav-button-alias">({{alias}})</span>{{/if}}{{/unless}}
 </a>
-
-
