--- a/src/patterns/__environment__/60-templates/tool.hbs
+++ b/src/patterns/__environment__/60-templates/tool.hbs
@@ -78,6 +78,39 @@
 
 {{/if}}
 
+{{! Initialize some sidebar list section data. }}
+{{assign 'sections' (arrayify null)}}
+
+{{! Build the first sidebar list section if applicable. }}
+{{#if (and access access.links)}}
+  {{#if (gt (length access.links) 0)}}
+
+    {{! Build the sidebar list section's content. }}
+    {{assign 'sections.0' (objectify icon=(default access.icon 'material-office') title=(default access.title (combine 'Access ' title)) links=access.links)}}
+
+  {{/if}}
+{{/if}}
+
+{{! Build the second sidebar list section if applicable. }}
+{{#if (and learn learn.links)}}
+  {{#if (gt (length learn.links) 0)}}
+
+  {{! Build the sidebar list section's content. }}
+  {{assign 'sections.1' (objectify icon=(default learn.icon 'material-search') title=(default learn.title (combine 'Learn About ' title)) links=learn.links)}}
+
+  {{/if}}
+{{/if}}
+
+{{! Build the last sidebar list section if applicable. }}
+{{#if (and materials materials.links)}}
+  {{#if (gt (length materials.links) 0)}}
+
+  {{! Build the sidebar list section's content. }}
+  {{assign 'sections.2' (objectify icon=(default materials.icon 'material-access_point') title=(default materials.title (combine 'Materials in ' title)) links=materials.links)}}
+
+  {{/if}}
+{{/if}}
+
 <div class="tool-page">
 
   {{> organisms-header classes='tool-page-header'}}
@@ -89,7 +122,7 @@
         {{> compounds-blocks}}
       {{/content}}
       {{#content 'section-main-sidebar'}}
-        {{! TODO: Add in sidebar list (`compounds-sidebar-list`)}}
+        {{> compounds-sidebar-list divider=(objectify start=false end=false)}}
       {{/content}}
     {{/extend}}
 
