Updates patterns and assets

--- a/src/patterns/__environment__/30-molecules/card~librarian.hbs
+++ b/src/patterns/__environment__/30-molecules/card~librarian.hbs
@@ -55,7 +55,7 @@
       <li class="card-librarian-contact-info-item"
           {{#if filterable}} data-search-key="libcal"{{/if}}>
         {{> tokens-icon id='material-calendar_month_outline'}}
-        {{> atoms-link href=libcal label="Schedule an appointment" classes="" icon=false}}
+        {{> atoms-link href=libcal label="Schedule an Appointment" classes="" icon=false}}
       </li>
       {{/if}}
     </ul>
