--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -4136,6 +4136,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
 }
 .sidebar-list-button {
   display: block;
