Updates patterns and assets

--- a/src/patterns/__environment__/50-organisms/main.hbs
+++ b/src/patterns/__environment__/50-organisms/main.hbs
@@ -25,7 +25,7 @@
 
     {{! Event page intro }}
     {{#if (eq type 'event-page')}}
-      {{> organisms-intro-interior-cover date=true}}
+      {{> organisms-intro-cover date=true}}
     {{/if}}
 
 
