--- a/src/patterns/__environment__/60-templates/home.hbs
+++ b/src/patterns/__environment__/60-templates/home.hbs
@@ -1,3 +1,6 @@
+{{! Use search metadata if detecteed. }}
+{{#if __meta__.search}}{{assign 'intro.search' __meta__.search}}{{/if}}
+
 {{! Reformat the intro. }}
 {{#with intro}}
 
