Adds check for production environment

--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -9,6 +9,7 @@
   
   <link rel="stylesheet" href="https://template.library.emory.edu/styleguide/patternlibrary/releases/{{__meta__.package.version}}/css/style.min.css">
 
+  {{#if (eq __environment__ 'production')}}  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61756900-31"></script>
   </script>
@@ -16,7 +17,7 @@
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     
     {{#if __meta__.api-ids.analytics-property-id}}
-    
+
     {{assign 'ga-id' __meta__.api-ids.analytics-property-id}}
     {{assign 'namespace' (lowercase __meta__.api-ids.namespace)}}
     
@@ -30,6 +31,7 @@
 
     </script>
     <script async="async" src="https://www.google-analytics.com/analytics.js"></script>
+  {{/if}}
   
 </head>
 <body>
